--- a/src/booknaviger/resources/ReadComponent_fr.properties
+++ b/src/booknaviger/resources/ReadComponent_fr.properties
@@ -1,2 +1,5 @@
 # image of loading
 loading_image=/booknaviger/resources/graphics/chargement.png
+
+# image can't be loaded
+no_image=/booknaviger/resources/graphics/noPreviewFr.png
