First / Last page reached indication
Tried to add Mac OS X gestures, but it doesn't work, don't know why….
Closes #1

--- a/src/booknaviger/resources/ReadComponent_fr.properties
+++ b/src/booknaviger/resources/ReadComponent_fr.properties
@@ -3,3 +3,7 @@ loading_image=/booknaviger/resources/graphics/chargement.png
 
 # image can't be loaded
 no_image=/booknaviger/resources/graphics/noPreviewFr.png
+
+# first / last page reached
+firstPage.text=Premi\u00e8re page atteinte
+lastPage.text=Derni\u00e8re page atteinte
