List of pages while reading. Close #13

--- a/src/booknaviger/resources/ReadInterface_fr.properties
+++ b/src/booknaviger/resources/ReadInterface_fr.properties
@@ -7,6 +7,7 @@ tenPagesBeforeReadInterfaceMenuItemText=10 pages avant
 tenPagesAfterReadInterfaceMenuItemText=10 pages apr\u00e8s
 firstPageReadInterfaceMenuItemText=Premi\u00e8re page
 lastPageReadInterfaceMenuItemText=Derni\u00e8re page
+listPagesReadInterfaceMenuItemText=Liste des pages
 
 # display options
 displayReadInterfaceMenuText=Affichage
