Some optimisation on the profiles. #20

--- a/src/booknaviger/resources/ProfileDialog_fr.properties
+++ b/src/booknaviger/resources/ProfileDialog_fr.properties
@@ -1,2 +1,6 @@
-# book folder chooser jdialog
-books-folder_title_jdialog=Choisissez le dossier contenant les livres...
+#profiles jdialog title
+profileDialogString=Liste des profils
+
+#new profile / delete profile button string
+newProfileButtonString=Nouveau profil
+deleteProfileButtonString=Supprimer le profil
