HTML report is now finished. Close #6
Multi pages to limit the number of thumbnail on the report (for
hangout).
Continue to generate the report even when an error occurs during the
creation of the thumbnail.

--- a/src/booknaviger/resources/ReportGenerator_fr.properties
+++ b/src/booknaviger/resources/ReportGenerator_fr.properties
@@ -6,7 +6,8 @@ nbrOfSeries.text=s\u00e9ries d'albums
 nbrOfAlbums.text=albums
 MB.text=Mo
 GB.text=Go
-
+previousPage.text=Page pr\u00e9c\u00e9dente
+nextPage.text=Page suivante
 
 # progress informations resources
 TOCgen.text=G\u00e9n\u00e8re la table des mati\u00e8res
