#26 #25 #8 in progress. Not finished (far from it)

--- a/src/booknaviger/resources/InfoInterface_fr.properties
+++ b/src/booknaviger/resources/InfoInterface_fr.properties
@@ -10,4 +10,5 @@ infoInterface.error.title=Erreur
 
 
 # errorMessages
-
+rights.title=Impossible de lire un fichier / dossier (droits)
+rights.message=Le fichier/dossier "{0}" ne peut \u00eatre lu \u00e0 cause des droits d\u00e9finis
