--- a/src/booknaviger/resources/InfoInterface_fr.properties
+++ b/src/booknaviger/resources/InfoInterface_fr.properties
@@ -12,3 +12,7 @@ infoInterface.error.title=Erreur
 # errorMessages
 rights.title=Impossible de lire un fichier / dossier (droits)
 rights.message=Le fichier/dossier "{0}" ne peut \u00eatre lu \u00e0 cause des droits d\u00e9finis
+report-files.title=Erreur avec les fichiers durant le reporting
+report-files.message=Une erreur s'est produites avec les fichiers durant le reporting (les fichiers n'ont pas \u00e9t\u00e9 trouv\u00e9s ou l'encodage n'\u00e9tait pas support\u00e9)
+report-IO.title=Erreur E/S durant le reporting
+report-IO.message=Une erreur d'entr\u00e9e/sortie s'est produite durant le reporting
