--- a/src/booknaviger/resources/InfoInterface_fr.properties
+++ b/src/booknaviger/resources/InfoInterface_fr.properties
@@ -7,7 +7,8 @@ infoInterface.error.title=Erreur
 
 
 # warningMessages
-
+update-parseerror.title=Impossible de v\u00e9rifier les mises \u00e0 jour
+update-parseerror.message=Impossible de lire le message du serveur sur les mises \u00e0 jour
 
 # errorMessages
 rights.title=Impossible de lire un fichier / dossier (droits)
@@ -16,3 +17,5 @@ report-files.title=Erreur avec les fichiers durant le reporting
 report-files.message=Une erreur s'est produites avec les fichiers durant le reporting (les fichiers n'ont pas \u00e9t\u00e9 trouv\u00e9s ou l'encodage n'\u00e9tait pas support\u00e9)
 report-IO.title=Erreur E/S durant le reporting
 report-IO.message=Une erreur d'entr\u00e9e/sortie s'est produite durant le reporting
+file-read.title=Impossible de lire le fichier
+file-read.message=Le fichier "{0}" ne peut \u00eatre lu. Consulter le log pour plus de d\u00e9tails
