Close #8, Close #25, Close #26

--- a/src/booknaviger/resources/InfoInterface_fr.properties
+++ b/src/booknaviger/resources/InfoInterface_fr.properties
@@ -19,3 +19,7 @@ report-IO.title=Erreur E/S durant le reporting
 report-IO.message=Une erreur d'entr\u00e9e/sortie s'est produite durant le reporting
 file-read.title=Impossible de lire le fichier
 file-read.message=Le fichier "{0}" ne peut \u00eatre lu. Consulter le log pour plus de d\u00e9tails
+properties-load.title=Les param\u00e8tres n'ont pu \u00eatre charg\u00e9s
+properties-load.message=Le fichiers des param\u00e8tres ({0}) n'a pu \u00eatre charg\u00e9. Consulter le log pour plus de d\u00e9tails
+properties-load.title=Les param\u00e8tres n'ont pu \u00eatre sauvegard\u00e9s
+properties-load.message=Le fichiers des param\u00e8tres ({0}) n'a pu \u00eatre sauvegard\u00e9. Consulter le log pour plus de d\u00e9tails
