Fixed some bugs. Close #32
Initiated #35 : finally choose to try catch massiv code and redirect to
logger

--- a/src/booknaviger/resources/InfoInterface_fr.properties
+++ b/src/booknaviger/resources/InfoInterface_fr.properties
@@ -21,7 +21,9 @@ file-read.title=Impossible de lire le fichier
 file-read.message=Le fichier "{0}" ne peut \u00eatre lu. Consulter le log pour plus de d\u00e9tails
 properties-load.title=Les param\u00e8tres n'ont pu \u00eatre charg\u00e9s
 properties-load.message=Le fichiers des param\u00e8tres ({0}) n'a pu \u00eatre charg\u00e9. Consulter le log pour plus de d\u00e9tails
-properties-load.title=Les param\u00e8tres n'ont pu \u00eatre sauvegard\u00e9s
-properties-load.message=Le fichiers des param\u00e8tres ({0}) n'a pu \u00eatre sauvegard\u00e9. Consulter le log pour plus de d\u00e9tails
+properties-save.title=Les param\u00e8tres n'ont pu \u00eatre sauvegard\u00e9s
+properties-save.message=Le fichiers des param\u00e8tres ({0}) n'a pu \u00eatre sauvegard\u00e9. Consulter le log pour plus de d\u00e9tails
 image-convert.title=L'image ne peut \u00eatre affich\u00e9e
 image-convert.message=L'image lue ne peut \u00eatre convertie pour s'afficher dans l'application. Consulter le log pour plus de d\u00e9tails
+unknown.title=Une erreur inconnue s'est produite
+unknown.message=Une erreur inconnue s'est produite. Consulter le log pour plus de d\u00e9tails
