Read menu added. Close #40

--- a/src/booknaviger/resources/MainInterface_fr.properties
+++ b/src/booknaviger/resources/MainInterface_fr.properties
@@ -10,6 +10,7 @@ books-folder_menu=Dossier contenant les livres
 exit_menu=Quitter
 
 # controls Menu
+read_menu=Lire
 resume_menu=Reprendre la lecture
 profile-list_menu=Profils
 profiles_menu=Profils
